--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -143,5 +143,6 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
             <script src="assets/js/flexslider.js"></script>
+            <script src="assets/js/load.js"></script>
 	</body>
 </html>
